--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "history": "^4.6.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-emoji": "^0.5.0",
     "react-fa": "^4.2.0",
+    "react-ga": "^2.2.0",
     "react-router-dom": "^4.1.1",
     "react-scripts": "1.0.10",
     "react-sound": "^0.6.2"
