--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-emoji": "^0.5.0",
     "react-fa": "^4.2.0",
     "react-ga": "^2.2.0",
+    "react-instagram-embed": "^1.3.1",
     "react-router-dom": "^4.1.1",
     "react-scripts": "1.0.10",
     "react-sound": "^0.6.2"
